Web Inspector: Dark Mode: Increase the contrast in the settings tab for @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=272138
Reviewed by NOBODY (OOPS!).

Lighten the border of the settings view blackbox in BlackboxSettingsView.ccss.
Darken the background of the settings view blackbox in BlackboxSettingsView.css.
Add background-color content to the background of the settings view blackbox in BlackboxSettingsView.css.
Lighten the container reference text color in SettingsTabContentView.css.
Darken the background color of the navigation bar and the settings view in SettingsTabContentView.css.

* Source/WebInspectorUI/UserInterface/Views/BlackboxSettingsView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .settings-view.blackbox > table > tbody td.url):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .settings-view.blackbox > table > tbody td:not(.remove-blackbox)):
* Source/WebInspectorUI/UserInterface/Views/SettingsTabContentView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-view.tab.settings > .settings-view > .container.reference > a):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-view.tab.settings > .settings-view):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-view.tab.settings .navigation-bar):

--- a/Source/WebInspectorUI/UserInterface/Views/BlackboxSettingsView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/BlackboxSettingsView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2019-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -111,4 +112,16 @@
     width: 15px;
     height: 15px;
     margin-inline-start: 4px;
+}
+
+@media (prefers-color-scheme: dark) {
+    @media (prefers-contrast: more) {
+        .settings-view.blackbox > table > tbody td.url {
+            background-color: var(--background-color-content);
+        }
+
+        .settings-view.blackbox > table > tbody td:not(.remove-blackbox) {
+            border: 1px solid hsl(0, 0%, 70%, 0.8);
+        }
+    }
 }
